<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <Button
        android:id="@+id/btnAddMedicine"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:text="Añadir medicamento"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShowShots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPharmacy"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:text="mapa de farmacias"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAdminPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnShowShots" />

    <Button
        android:id="@+id/btnAdminPerson"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:text="administrar paciente"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMedicationHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPharmacy" />

    <Button
        android:id="@+id/btnMedicationHistory"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:text="historial medicacion"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnShoppingCart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdminPerson" />

    <Button
        android:id="@+id/btnShoppingCart"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="46dp"
        android:text="lista de la compra"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMedicationHistory" />

    <Button
        android:id="@+id/btnShowShots"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="10dp"
        android:text="ver tomas"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/btnPharmacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddMedicine" />

</androidx.constraintlayout.widget.ConstraintLayout>